--- a/src/pages/gallery/custom.astro
+++ b/src/pages/gallery/custom.astro
@@ -63,18 +63,18 @@
 	</head>
 	<body>
 		<div class="container">
-			<a href="/" class="back">← back</a>
-			<h1>custom banners</h1>
+			<a href="/" class="back">← Back</a>
+			<h1>Custom Banners</h1>
 			<p class="subtitle">$15 – $25 depending on size</p>
 			
 			<div class="gallery">
-				<div class="photo">photo coming soon</div>
-				<div class="photo">photo coming soon</div>
-				<div class="photo">photo coming soon</div>
-				<div class="photo">photo coming soon</div>
+				<div class="photo">Photo coming soon</div>
+				<div class="photo">Photo coming soon</div>
+				<div class="photo">Photo coming soon</div>
+				<div class="photo">Photo coming soon</div>
 			</div>
 			
-			<a href="/#order" class="cta">order a custom banner</a>
+			<a href="/#order" class="cta">Order a Custom Banner</a>
 		</div>
 	</body>
 </html>
