--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,8 +84,8 @@
 				padding: 1rem 0;
 			}
 			.price {
-				font-size: 1.8rem;
-				font-weight: 700;
+				font-size: 1.4rem;
+				font-weight: 600;
 				color: #0d5c63;
 			}
 			.price-note {
@@ -182,8 +182,7 @@
 			
 			<div class="card">
 				<div class="pricing">
-					<div class="price">$15 – $25</div>
-					<p class="price-note">Depending on size & complexity</p>
+					<div class="price">Contact for Pricing</div>
 				</div>
 			</div>
 			
