--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,7 +182,7 @@
 					<a href="/gallery/birthday" class="service">Birthday</a>
 					<a href="/gallery/holiday" class="service">Holiday</a>
 					<a href="/gallery/party" class="service">Party</a>
-					<a href="/gallery/graduation" class="service">Graduation</a>
+					<a href="/gallery/church" class="service">Church</a>
 					<a href="/gallery/custom" class="service">Custom</a>
 				</div>
 			</div>
