--- a/src/pages/gallery/holiday.astro
+++ b/src/pages/gallery/holiday.astro
@@ -82,39 +82,33 @@
 			<div class="gallery">
 				<div class="photo">
 					<span class="badge">For Sale</span>
-					<img src="/images/holiday/IMG_3962.jpeg" alt="Valentine's Day Banner" />
+					<img src="/images/holiday/IMG_3962.jpeg" alt="Happy Valentine's Day Banner" />
 				</div>
 				<div class="photo">
 					<span class="badge">For Sale</span>
-					<img src="/images/holiday/IMG_2777.jpeg" alt="Valentine's Day Banner" />
+					<img src="/images/holiday/IMG_2595.jpeg" alt="XOXO Valentine's Banner" />
 				</div>
 				<div class="photo">
 					<span class="badge">For Sale</span>
-					<img src="/images/holiday/FullSizeRender.jpeg" alt="Valentine's Day Banner" />
+					<img src="/images/holiday/FullSizeRender 2.jpeg" alt="Happy Valentine's Day Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_2595.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_2834.jpeg" alt="Trick or Treat Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_2834.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_2777.jpeg" alt="Happy Halloween Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_2879.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_3078.jpeg" alt="Give Thanks Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_3078.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_3224.jpeg" alt="Walking in a Winter Wonderland Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_3224.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_3379.jpeg" alt="Baby It's Cold Outside Banner" />
 				</div>
 				<div class="photo">
-					<img src="/images/holiday/IMG_3379.jpeg" alt="Holiday Banner" />
-				</div>
-				<div class="photo">
-					<img src="/images/holiday/IMG_3420.jpeg" alt="Holiday Banner" />
-				</div>
-				<div class="photo">
-					<img src="/images/holiday/FullSizeRender 2.jpeg" alt="Holiday Banner" />
+					<img src="/images/holiday/IMG_3420.jpeg" alt="Let It Snow Banner" />
 				</div>
 			</div>
 			
